examples/type_system/failing/147_constructor_pattern_arity_none_too_many.flx
// E085: constructor-pattern arity mismatch (expects 0 fields, pattern provides 1).

type MaybeI = SomeI(Int) | NoneI

fn main() {
    let x = NoneI
    let _y = match x {
        NoneI(v) -> v,
        SomeI(n) -> n,
    }
}
